crates/server/src/snapshots/server__error__tests__BadRequest_body.snap
---
source: crates/server/src/error.rs
expression: body
snapshot_kind: text
---
Bad request: Invalid input
