crates/server/src/snapshots/server__error__tests__FileTooBig_response.snap
---
source: crates/server/src/error.rs
expression: response
---
Response {
    status: 413,
    version: HTTP/1.1,
    headers: {},
    body: Body(
        UnsyncBoxBody,
    ),
}
