crates/server/src/snapshots/server__error__tests__Internal_body.snap
---
source: crates/server/src/error.rs
expression: body
snapshot_kind: text
---
Internal server error
