crates/server/src/snapshots/server__error__tests__InvalidExpiry_body.snap
---
source: crates/server/src/error.rs
expression: body
snapshot_kind: text
---
Expiry must be between 60s and 2592000s
