crates/server/src/snapshots/server__error__tests__NotFound_status_code.snap
---
source: crates/server/src/error.rs
expression: status_code
snapshot_kind: text
---
404 Not Found
