crates/server/src/snapshots/server__error__tests__ParseError_body.snap
---
source: crates/server/src/error.rs
expression: body
snapshot_kind: text
---
invalid digit found in string
