crates/server/src/snapshots/server__error__tests__ParseError_response.snap
---
source: crates/server/src/error.rs
expression: response
snapshot_kind: text
---
Response {
    status: 400,
    version: HTTP/1.1,
    headers: {},
    body: Body(
        UnsyncBoxBody,
    ),
}
