crates/server/src/snapshots/server__error__tests__SqlxError_status_code.snap
---
source: crates/server/src/error.rs
expression: status_code
snapshot_kind: text
---
500 Internal Server Error
