crates/server/src/snapshots/server__error__tests__Unauthorized_response.snap
---
source: crates/server/src/error.rs
expression: response
snapshot_kind: text
---
Response {
    status: 403,
    version: HTTP/1.1,
    headers: {},
    body: Body(
        UnsyncBoxBody,
    ),
}
